# Div

./: .gitignore  README.md  scmtr.m  testFun.m
+noodles/: NoodleOptions.m  NoodleProblem.m  NoodleResults.m  NoodleState.m  NoodleSubproblem.m  State.m  SubproblemArc.m  SubproblemCr.m  SubproblemScmcr.m  SubproblemScmtr.m  SubproblemTR.m  SubproblemTr.m  noodles.m
+yopt/+dfo/: dhc.py
+yopt/+hoo/: CholeskyMultIdentity.m  Newton.m  StepSize.m  (+6 more)
BenchmarkConverter/Fujita_SciSignal2010/model1_data1_l2v4/: CMakeLists.txt  JSparse.h  JSparseB.h  adjoint.h  dxdotdp.h  fixed_parameter.h  flux.h  model1_data1_l2v4.h  model1_data1_l2v4_J.cpp  model1_data1_l2v4_JB.cpp  model1_data1_l2v4_JDiag.cpp  model1_data1_l2v4_JSparse.cpp  model1_data1_l2v4_JSparseB.cpp  model1_data1_l2v4_Jv.cpp  model1_data1_l2v4_JvB.cpp  model1_data1_l2v4_Jy.cpp  model1_data1_l2v4_dJydsigma.cpp  model1_data1_l2v4_dJydy.cpp  model1_data1_l2v4_dsigmaydp.cpp  model1_data1_l2v4_dwdp.cpp  model1_data1_l2v4_dwdx.cpp  model1_data1_l2v4_dxdotdp.cpp  model1_data1_l2v4_dydp.cpp  model1_data1_l2v4_dydx.cpp  model1_data1_l2v4_qBdot.cpp  model1_data1_l2v4_sigmay.cpp  model1_data1_l2v4_sx0.cpp  model1_data1_l2v4_sxdot.cpp  model1_data1_l2v4_w.cpp  model1_data1_l2v4_x0.cpp  model1_data1_l2v4_x0_fixedParameters.cpp  model1_data1_l2v4_xBdot.cpp  model1_data1_l2v4_xdot.cpp  model1_data1_l2v4_y.cpp  my.h  observable.h  parameter.h  sensitivity.h  setup.py  sigmay.h  (+5 more)
BenchmarkConverter/Fujita_SciSignal2010/model1_data1_l2v4/model1_data1_l2v4/: __init__.py  model1_data1_l2v4.py
BenchmarkConverter/Fujita_SciSignal2010/model1_data1_l2v4/swig/: model1_data1_l2v4.i  model1_data1_l2v4_wrap.cpp
Study-ABC-AdaptiveDistance/: db.db  gaussian_cd.py
Study-ErrorFunction/: predict_outliers.m
Study-HOO/: test_jakstat.m  test_jakstat_Noodles.mat  test_jakstat_fmincon-ip.mat  test_jakstat_fmincon-tr.mat  test_jakstat_fmincon.mat  test_jakstat_scmcr.mat  test_jakstat_scmcr_src.mat  test_noodles.m  test_pesto_jakstat.m  test_pesto_jakstat_fmincon.mat  test_pesto_jakstat_noodles-scr.mat  test_pesto_jakstat_scmcr.mat
Study-HigherOrderOptimizers/: test_jakstat.m  test_jakstat_fmincon-tr.mat  test_jakstat_noodles.mat  test_noodles.m  test_pesto_jakstat.m  test_pesto_jakstat_fmincon.mat
Study-LightweightHybridOptimizers/: README.md  test_rme.m  test_rme_latin hypercube_100_10.mat  test_rme_latin hypercube_50_20.mat  test_rme_ss latin hypercube_100_10.mat  test_rme_ss latin hypercube_500_10.mat  test_rme_ss latin hypercube_50_10.mat
bobyqa/: mexbobyqa.F
pyabc_applications/: script.py
pyabc_tests/: t1.py  t2.py
testmodels/: TF.m
tumor2d/: script_abc_redis_worker.sh  script_qsub_redis_worker.sh  script_tumor2d.py  script_tumor2d_adap.py  script_tumor2d_adap_reweighted.py  script_tumor2d_addi.py  script_tumor2d_lessweights.py  script_tumor2d_reweighted.py  script_tumor2d_test.py  stderr.txt  stdout.txt
(+951 files in other folders)
